establish standalone Clojure client repository